# advanced-python-individual-assignment

./: README.md  app.py  check.ipynb  pyproject.toml
src/ie_bike_model/: __init__.py  model.py  util.py
tests/: test_model.py  test_util.py
